Added reducer exercises

--- a/intro/exercises-final/reducers/01-counter-reducer.html
+++ b/intro/exercises-final/reducers/01-counter-reducer.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Hello World React</title>
+    <title>Exercise 01: Counter Reducer</title>
     <meta charset="utf-8" />
     <script src="../../babel.min.js"></script>
     <script src="../../testing.js"></script>
