Delete old examples and redo naming like five times

--- a/other/intro-templates/00-reducers/00-counter-reducer.html
+++ b/other/intro-templates/00-reducers/00-counter-reducer.html
@@ -7,9 +7,7 @@
 
 
     <script type="text/babel">
-
-        // Exercise 01: Basic Counter Reducer
-
+        "use strict";
         // Task: write a reducer function that does counter operations on a number
 
         // This reducer should have a single number as its "state", and respond to five action types:
