--- a/other/intro-templates/01-store-api/00-store-setup.html
+++ b/other/intro-templates/01-store-api/00-store-setup.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Exercise 05: Using combineReducers</title>
+    <title>Exercise 00: Using combineReducers</title>
     <meta charset="utf-8" />
     <script src="../../babel.min.js"></script>
     <script src="../../redux.min.js"></script>
@@ -8,9 +8,7 @@
 
 
     <script type="text/babel">
-
-        // Exercise 05: Using combineReducers and createStore
-
+        "use strict";
         // Task: use combineReducers to create a root reducer with the right state slice names.  Then,
         //       create a Redux store using that root reducer and the provided initial state.
 
