--- a/other/intro-templates/01-store-api/01-dispatching-updates.html
+++ b/other/intro-templates/01-store-api/01-dispatching-updates.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Exercise 06: Dispatching and updates</title>
+    <title>Exercise 01: Dispatching and updates</title>
     <meta charset="utf-8" />
     <script src="../../babel.min.js"></script>
     <script src="../../redux.min.js"></script>
@@ -21,8 +21,7 @@
 <div id="output"></div>
 
 <script type="text/babel">
-
-    // Exercise 06: Dispatching and updates
+    "use strict";
 
     // Task: A store has been created, with a simple reducer that stores a current text value.
 
