--- a/intro/exercises-final/00-reducers/01-object-reducer.html
+++ b/intro/exercises-final/00-reducers/01-object-reducer.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Exercise 02: Object Reducer</title>
+    <title>Exercise 01: Object Reducer</title>
     <meta charset="utf-8" />
     <script src="../../babel.min.js"></script>
     <script src="../../testing.js"></script>
@@ -8,8 +8,6 @@
 
     <script type="text/babel">
         "use strict";
-
-        // Exercise 02: Object Reducer
 
         // Task: write a reducer function that updates the right fields in an object describing a Jedi Knight.
 
@@ -41,12 +39,34 @@
         function jediReducer(state = initialState, action) {
             switch(action.type) {
                 case "SET_CURRENT_JEDI" : {
+                    return action.payload;
                 }
                 case "SET_JOB" : {
+                    return {
+                        ...state,
+                        job : action.job
+                    };
                 }
                 case "FINISH_TRAINING" : {
+                    return {
+                        ...state,
+                        job : "Jedi Knight",
+                        weapons : {
+                            ...state.weapons,
+                            lightsaber : "blue"
+                        }
+                    };
                 }
                 case "JOIN_DARK_SIDE" : {
+                    return {
+                        ...state,
+                        side : "dark",
+                        job : "Sith",
+                        weapons : {
+                            ...state.weapons,
+                            lightsaber : "red"
+                        }
+                    };
                 }
 
                 default : {
