--- a/intro/exercises-final/01-store-api/01-dispatching-updates.html
+++ b/intro/exercises-final/01-store-api/01-dispatching-updates.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <script src="../../babel.min.js"></script>
     <script src="../../redux.min.js"></script>
-    <script src="../../testing.js"></script>
+
 
 </head>
 <body>
@@ -20,7 +20,9 @@
 </div>
 <div id="output"></div>
 
-<script type="text/babel">
+<script src="../../testing.js"></script>
+
+<script type="text/javascript">
     "use strict";
 
     // Task: A store has been created, with a simple reducer that stores a current text value.
