--- a/intro/exercises/00-reducers/02-list-reducer.html
+++ b/intro/exercises/00-reducers/02-list-reducer.html
@@ -61,7 +61,7 @@
     tests({
         ["adds a new user correctly"]() {
             const state = deepFreeze([{username : "bkenobi", firstName : "Obi-Wan", lastName : "Kenobi"}]);
-            const action = {type : "ADD_USER", user: {username : "lskywalker", firstName : "Luke", lastName : "Skywalker"}}
+            const action = {type : "ADD_USER", user: {username : "lskywalker", firstName : "Luke", lastName : "Skywalker"}};
             const result = usersReducer(state, action);
 
             assertStrictEquals(result[result.length - 1], action.user);
