state is undefined in final combineReducer test, should be referencing rootReducerInitialState

--- a/intro/exercises-final/00-reducers/03-combined-reducer.html
+++ b/intro/exercises-final/00-reducers/03-combined-reducer.html
@@ -87,7 +87,7 @@
 
             const result = rootReducer(undefined, action);
 
-            assert(result.users.length === state.users.length + 1, "Should have added one item");
+            assert(result.users.length === rootReducerInitialState.users.length + 1, "Should have added one item");
             assert(result !== rootReducerInitialState, "Must create a new state object");
         },
     })
