--- a/intro/exercises/01-store-api/01-dispatching-updates.html
+++ b/intro/exercises/01-store-api/01-dispatching-updates.html
@@ -64,15 +64,12 @@
 
     tests({
         ["Should dispatch and update the text when the button is clicked"]() {
-            const originalText = textInput.value;
             const newText = "Test text";
             textInput.value = newText;
-
             setTextButton.click();
-            textInput.value = originalText;
 
             const state = store.getState();
-            eq("More test text", displayText);
+            eq(newText, state.currentText);
 
         },
         ["Should set the display text from the updated state"]() {
@@ -81,7 +78,7 @@
 
             const displayText = currentTextDisplay.innerText;
 
-            eq("More test text", newText);
+            eq(newText, displayText);
         },
     })
 
